--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,6 @@
 layout: default
 ---
 
-{%-include back_link.html-%}
-
-<h1>{{ page.title }}</h1>
+{%- if page.detail_image -%}<img class="detail_header" src="{{ page.detail_image }}">{%- endif -%}
 
 {{ content }}
