--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,10 @@
 ---
 layout: default
+title:  "POSTS"
 ---
 
-{%-include back_link.html-%}
+{%- if page.detail_image -%}<img class="detail_header" src="{{ page.detail_image }}">{%- endif -%}
 
-<article>
-  <p class="post-meta">
-    <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
-  </p>
-  
-  <h1>{{ page.title }}</h1>
+<h1>{{ page.post-title }}</h1>
 
-  {{ content }}
-</article>
+{{ content }}
