--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,10 +17,10 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="{{ site.baseurl | append: '/' }}">Home</a></li>
               {% if site.blog == true %}
-                <li><a href="{{ '/blog' | prepend: site.baseurl }}">Blog</a></li>
+                <li><a href="{{ '/blog' | prepend: site.baseurl }}">Articles</a></li>
               {% endif %}
 
-              {% for page in site.dropdown %}
+              <!-- {% for page in site.dropdown %}
                 <li class="dropdown dropdown-{{ page.dropdown }}">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                     role="button" aria-haspopup="true" aria-expanded="false">{{ page.dropdown }}
@@ -30,7 +30,7 @@
                     <li priority="{{ page.priority }}"><a href="{% if page.redirect_to %}{{page.redirect_to}}{% else %}{{ page.url | prepend: site.baseurl }}{% endif %}">{{ page.title }}</a></li>
                   </ul>
                 </li>
-              {% endfor %}
+              {% endfor %} -->
               {% for page in site.items %}
                 <li class="nav-item"><a href="{% if page.redirect_to %}{{page.redirect_to}}{% else %}{{ page.url | prepend: site.baseurl }}{% endif %}">{{ page.title }}</a></li>
               {% endfor %}
